[gd_scene load_steps=7 format=3 uid="uid://clxbc1mi73jm2"]

[ext_resource type="Texture2D" uid="uid://bdpm1r2k5kch" path="res://asset/UI/menu_icon.png" id="1_g8xr5"]
[ext_resource type="Script" path="res://scenes/nonProjectile/Stapler.gd" id="1_ibvq5"]
[ext_resource type="Texture2D" uid="uid://b5rkjwrjqynub" path="res://asset/UI/meun_gear.png" id="2_efx8o"]
[ext_resource type="Texture2D" uid="uid://bnf6gxjevx6cq" path="res://asset/UI/play_pause_icon.png" id="3_risii"]

[sub_resource type="AtlasTexture" id="AtlasTexture_prq7c"]
atlas = ExtResource("1_g8xr5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ffx7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prq7c")
}, {
"duration": 1.0,
"texture": ExtResource("2_efx8o")
}, {
"duration": 1.0,
"texture": ExtResource("3_risii")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Stapler" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_7ffx7")
script = ExtResource("1_ibvq5")

[node name="StartAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="EndAudioPlayer" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="finished" from="EndAudioPlayer" to="." method="_on_end_audio_player_finished"]
